# md2gost

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: write-report.md
Formula/: md2gost.rb
md2gost/: cli.py  converter.py  validator.py  watcher.py
md2gost/filters/: appendix-listing.lua  gost-equations.lua  gost-tables.lua  uppercase-h1.lua
md2gost/templates/: gost-7.32.docx
tests/: test_converter.py  test_validator.py
tests/fixtures/: invalid.md  minimal_template.docx  valid.md
