[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "md2gost"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "watchdog>=4.0",
    "PyYAML>=6.0",
]

[project.scripts]
md2gost = "md2gost.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
md2gost = ["templates/*.docx", "filters/*.lua"]
